--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto tela de Login</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -20,8 +21,26 @@
 
                 <p>Seja Bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
 
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
 
+                    <div class="campo">
+
+                        <div class="material-symbols-outlined">mail</div>
+
+                        <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required>
+                        <label for="ilogin"></label>
+
+                    </div>
+                    <div class="campo">
+
+                        <div class="material-symbols-outlined">key</div>
+
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required>
+                        <label for="isenha"></label>
+
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a senha <i class="material-symbols-outlined">lock_reset</i></a>
                 </form>
             </div>
 
