formatação dos botões

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <label for="ilogin"></label>
 
                     </div>
+
                     <div class="campo">
 
                         <div class="material-symbols-outlined">key</div>
@@ -39,8 +40,10 @@
                         <label for="isenha"></label>
 
                     </div>
+
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha <i class="material-symbols-outlined">lock_reset</i></a>
+
+                    <a href="esqueci.html" class="botao">Esqueci a senha <i class="material-symbols-outlined">lock_reset</i></a>
                 </form>
             </div>
 
