--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <div class="campo">
 
-                        <div class="material-symbols-outlined">mail</div>
+                        <i class="material-symbols-outlined">mail</i>
 
                         <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required>
                         <label for="ilogin"></label>
@@ -34,7 +34,7 @@
 
                     <div class="campo">
 
-                        <div class="material-symbols-outlined">key</div>
+                        <i class="material-symbols-outlined">key</i>
 
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required>
                         <label for="isenha"></label>
